--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "ts-node src/index.ts",
-    "dev:watch": "ts-node-dev --respawn src/index.ts",
+    "dev:watch": "ts-node-dev src/index.ts",
     "build": "npm-run-all clean tsc",
     "clean": "rimraf dist/*",
     "tsc": "tsc",
@@ -26,6 +26,8 @@
     "typescript": "^4.1.3"
   },
   "devDependencies": {
+    "@types/express": "^4.17.11",
+    "ejs": "^3.1.5",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
     "ts-node": "^9.1.1",
