--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/butibuti/LearnWebGPU#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "ejs": "^3.1.5",
     "typescript": "^4.1.3"
   },
   "devDependencies": {
