--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
+    "build-css": "node-sass --include-path scss public/scss/style.scss public/css/style.css",
     "dev": "ts-node src/index.ts",
     "dev:watch": "ts-node-dev src/index.ts",
     "build": "npm-run-all clean tsc",
@@ -22,8 +23,10 @@
   },
   "homepage": "https://github.com/butibuti/LearnWebGPU#readme",
   "dependencies": {
-    "express": "^4.17.1",
     "ejs": "^3.1.5",
+    "express": "^4.17.1",
+    "express-ejs-layouts": "^2.5.0",
+    "node-sass": "^5.0.0",
     "typescript": "^4.1.3"
   },
   "devDependencies": {
