--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
     "ts-node": "^9.1.1",
-    "ts-node-dev": "^1.1.1"
+    "ts-node-dev": "^1.1.1",
+    "webpack": "^5.23.0",
+    "webpack-cli": "^4.5.0"
   }
 }
