--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "build": "npm-run-all clean tsc",
     "clean": "rimraf dist/*",
     "tsc": "tsc",
-    "start": "node ."
+    "start": "node .",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "debug-3DtoDot": "webpack --config webpack.3DToDot.dev.config",
+    "release-3DtoDot": "webpack --config webpack.3DToDot.pro.config"
   },
   "repository": {
     "type": "git",
@@ -27,15 +30,21 @@
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
     "node-sass": "^5.0.0",
+    "three": "^0.125.2",
     "typescript": "^4.1.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/jquery": "^3.5.5",
+    "@types/three": "^0.125.3",
     "ejs": "^3.1.5",
+    "file-loader": "^6.2.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
+    "ts-loader": "^8.0.17",
     "ts-node": "^9.1.1",
     "ts-node-dev": "^1.1.1",
+    "url-loader": "^4.1.1",
     "webpack": "^5.23.0",
     "webpack-cli": "^4.5.0"
   }
