--- a/package.json
+++ b/package.json
@@ -32,20 +32,20 @@
     "node-sass": "^5.0.0",
     "three": "^0.125.2",
     "webpack": "^5.23.0",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "url-loader": "^4.1.1",
+    "file-loader": "^6.2.0",
+    "webpack-cli": "^4.5.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/jquery": "^3.5.5",
     "@types/three": "^0.125.3",
     "ejs": "^3.1.5",
-    "file-loader": "^6.2.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
     "ts-loader": "^8.0.17",
     "ts-node": "^9.1.1",
-    "ts-node-dev": "^1.1.1",
-    "url-loader": "^4.1.1",
-    "webpack-cli": "^4.5.0"
+    "ts-node-dev": "^1.1.1"
   }
 }
