--- a/package.json
+++ b/package.json
@@ -35,17 +35,16 @@
     "typescript": "^4.1.3",
     "url-loader": "^4.1.1",
     "file-loader": "^6.2.0",
-    "webpack-cli": "^4.5.0"
-  },
-  "devDependencies": {
+    "webpack-cli": "^4.5.0",
     "@types/express": "^4.17.11",
     "@types/jquery": "^3.5.5",
     "@types/three": "^0.125.3",
-    "ejs": "^3.1.5",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
     "ts-loader": "^8.0.17",
     "ts-node": "^9.1.1",
     "ts-node-dev": "^1.1.1"
+  },
+  "devDependencies": {
   }
 }
