--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "homepage": "https://github.com/butibuti/LearnWebGPU#readme",
   "dependencies": {
     "ejs": "^3.1.5",
+    "emotion": "^11.0.0",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
     "node-sass": "^5.0.0",
